Init-LAB/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: myapp
    template:
      metadata:    
        labels:
          app: myapp
      spec:
        containers:
      - name: myapp #main container
        image: nginx:latest 
        ports:
        - name: myapp-port
          containerPort: 80
      volumeMounts:
      - name: git-source  
        mountPath: "/usr/share/nginx/html" 
      image: alpine/git:latest
      volumeMounts:
      - name: git-source
        mountPath: "/git-source"
        readOnly: false        
      command: ['sh', '-c', 'git clone $SOURCE /git-source']
  volumes:  
  - name: git-source
    emptyDir: {}
