Init-LAB/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
  - name: myapp #main container
    image: nginx:latest 
    ports:
        - name: myapp-port
          containerPort: 80
    volumeMounts:
    - name: git-source  
      mountPath: "/usr/share/nginx/html" 
  volumes:  
  - name: git-source
    emptyDir: {}
