Init-LAB/service-hpa.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-hpa
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer  
  ports:
  - protocol: TCP
    port: 80
    targetPort: myapp-port     
  selector:
    app: myapp
