Init-LAB/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1  # ingress controller nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            serviceName: myapp-svc
            servicePort: 80
